--- a/langchain_baseline.ipynb
+++ b/langchain_baseline.ipynb
@@ -149,8 +149,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 配置 Google Gemini 模型\n",
-    "api_key = os.getenv(\"GEMINI_API_KEY\") or os.getenv(\"GOOGLE_API_KEY\")\n",
+    "from google.colab import userdata\n",
+    "api_key = os.getenv(\"GEMINI_API_KEY\") or userdata.get(\"GOOGLE_API_KEY\")\n",
     "\n",
     "if not api_key:\n",
     "    print(\"⚠️ 請設定 GOOGLE_API_KEY 環境變數\")\n",
